--- a/pom.xml
+++ b/pom.xml
@@ -12,45 +12,34 @@
   <properties>
     <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <!-- Versions -->
     <junit.version>5.10.2</junit.version>
     <mockito.version>5.11.0</mockito.version>
     <jacoco.version>0.8.12</jacoco.version>
   </properties>
 
   <dependencies>
-
-    <!-- JUnit 5 -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- Mockito Core -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- Mockito + JUnit 5 integration -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <build>
     <plugins>
-
-      <!-- JUnit 5 runner -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -60,13 +49,20 @@
         </configuration>
       </plugin>
 
-      <!-- Code coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>${jacoco.version}</version>
-        <executions>
 
+        <!-- Configuración global de exclusiones -->
+        <configuration>
+          <excludes>
+            <exclude>**/ui/**</exclude>
+            <exclude>**/app/**</exclude>
+          </excludes>
+        </configuration>
+
+        <executions>
           <execution>
             <id>prepare-agent</id>
             <goals>
@@ -80,14 +76,6 @@
             <goals>
               <goal>report</goal>
             </goals>
-            <configuration>
-              <excludes>
-                <!-- Excluir clases de UI (difíciles de probar) -->
-                <exclude>**/ui/**</exclude>
-                <!-- Excluir clase principal con GUI -->
-                <exclude>**/app/**</exclude>
-              </excludes>
-            </configuration>
           </execution>
 
           <execution>
@@ -100,13 +88,11 @@
                 <rule>
                   <element>BUNDLE</element>
                   <limits>
-                    <!-- Objetivo de cobertura: 85% de instrucciones -->
                     <limit>
                       <counter>INSTRUCTION</counter>
                       <value>COVEREDRATIO</value>
                       <minimum>0.85</minimum>
                     </limit>
-                    <!-- Objetivo de cobertura: 75% de ramas -->
                     <limit>
                       <counter>BRANCH</counter>
                       <value>COVEREDRATIO</value>
@@ -115,25 +101,16 @@
                   </limits>
                 </rule>
               </rules>
-              <excludes>
-                <!-- Excluir clases de UI (difíciles de probar) -->
-                <exclude>**/ui/**</exclude>
-                <!-- Excluir clase principal con GUI -->
-                <exclude>**/app/**</exclude>
-              </excludes>
             </configuration>
           </execution>
-
         </executions>
       </plugin>
 
-      <!-- Run main classes -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.4.1</version>
       </plugin>
-
     </plugins>
   </build>
 
